# pulso-fiscal

./: .gitignore  LICENSE  README.md
db/: README.md  schema.draft.sql
db/migrations/: 001_senado_gastos_operacionales.sql  002_senado_latest_views.sql  003_senado_categoria_canonical_views.sql
docs/: decisiones.md  glosario.md  matriz-fuentes.md  metodologia.md  runbook-operativo.md
etl/: .env.example  README.md  pyproject.toml
etl/src/pulso_fiscal/: __init__.py  manifest.py
etl/src/pulso_fiscal/loaders/: supabase.py
etl/src/pulso_fiscal/metrics/: __init__.py
etl/src/pulso_fiscal/normalizers/: __init__.py  senado_gastos_operacionales.py
etl/src/pulso_fiscal/parsers/: __init__.py
etl/src/pulso_fiscal/scrapers/: __init__.py  senado_gastos_operacionales.py
etl/src/pulso_fiscal/storage/: r2.py
etl/tests/: test_senado_gastos_operacionales_normalizer.py  test_senado_gastos_operacionales_scraper_manifest.py  test_supabase_loader_validation.py
supabase/: config.toml
supabase/migrations/: 20260602000000_baseline_senado.sql  20260603000000_lockdown_public_access.sql  20260605000000_data_quality_constraints.sql  20260605010000_harden_public_defaults.sql  20260605020000_require_public_manifest_for_ok_runs.sql
web/: .env.example  package.json  pnpm-lock.yaml
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/app/fuentes/: page.tsx
web/src/app/metodologia/: page.tsx
web/src/app/ministerios/[slug]/: page.tsx
web/src/app/senadores/[id]/: page.tsx
web/src/components/: metric-card.tsx  site-footer.tsx  site-header.tsx  spending-ranking.tsx
web/src/data/: gastos.sample.ts  instituciones.sample.ts
web/src/lib/: data.ts  format.ts  queries.ts  supabase.ts  types.ts
